--- a/main.ipynb
+++ b/main.ipynb
@@ -1545,35 +1545,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1080x1080 with 0 Axes>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1080x1080 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.figure(figsize=(15,15))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -1654,7 +1625,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['ID'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-331a0e808e09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ID\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   3988\u001b[0m                 \u001b[0mweight\u001b[0m  \u001b[0;36m1.0\u001b[0m     \u001b[0;36m0.8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3989\u001b[0m         \"\"\"\n\u001b[0;32m-> 3990\u001b[0;31m         return super().drop(\n\u001b[0m\u001b[1;32m   3991\u001b[0m             \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3992\u001b[0m             \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   3934\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3935\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3936\u001b[0;31m                 \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3937\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3938\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[0;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[1;32m   3968\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3969\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3970\u001b[0;31m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3971\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3972\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   5016\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5017\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"ignore\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5018\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{labels[mask]} not found in axis\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5019\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5020\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['ID'] not found in axis\""
+     ]
+    }
+   ],
+   "source": [
+    "data.drop(\"ID\",axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1685,6 @@
        "      <th>Ascore</th>\n",
        "      <th>Cscore</th>\n",
        "      <th>...</th>\n",
-       "      <th>Ecstasy</th>\n",
        "      <th>Heroin</th>\n",
        "      <th>Ketamine</th>\n",
        "      <th>Legalh</th>\n",
@@ -1699,6 +1694,7 @@
        "      <th>Nicotine</th>\n",
        "      <th>Semer</th>\n",
        "      <th>VSA</th>\n",
+       "      <th>User_Canna</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1721,10 +1717,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1739,7 +1735,6 @@
        "      <td>0.76096</td>\n",
        "      <td>-0.14277</td>\n",
        "      <td>...</td>\n",
-       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -1749,6 +1744,7 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1768,11 +1764,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1788,7 +1784,6 @@
        "      <td>0.58489</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1797,6 +1792,7 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1811,7 +1807,6 @@
        "      <td>-0.30172</td>\n",
        "      <td>1.30612</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -1821,6 +1816,7 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1861,7 +1857,6 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -1869,6 +1864,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1881</th>\n",
@@ -1883,7 +1879,6 @@
        "      <td>0.76096</td>\n",
        "      <td>-1.51840</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
@@ -1893,6 +1888,7 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1882</th>\n",
@@ -1907,7 +1903,6 @@
        "      <td>-1.77200</td>\n",
        "      <td>-1.38502</td>\n",
        "      <td>...</td>\n",
-       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -1917,6 +1912,7 @@
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1883</th>\n",
@@ -1931,7 +1927,6 @@
        "      <td>-1.62090</td>\n",
        "      <td>-2.57309</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
@@ -1941,6 +1936,7 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1884</th>\n",
@@ -1955,7 +1951,6 @@
        "      <td>1.11406</td>\n",
        "      <td>0.41594</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
@@ -1965,10 +1960,11 @@
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1885 rows × 31 columns</p>\n",
+       "<p>1885 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1985,42 +1981,42 @@
        "1883 -0.95197  0.48246   -0.61113 -0.57009   -0.31685  0.91093 -1.92173   \n",
        "1884 -0.95197 -0.48246   -0.61113  0.21128   -0.31685 -0.46725  2.12700   \n",
        "\n",
-       "       Oscore   Ascore   Cscore  ...  Ecstasy  Heroin  Ketamine  Legalh  LSD  \\\n",
-       "0    -0.58331 -0.91699 -0.00665  ...        0       0         0       0    0   \n",
-       "1     1.43533  0.76096 -0.14277  ...        4       0         2       0    2   \n",
-       "2    -0.84732 -1.62090 -1.01450  ...        0       0         0       0    0   \n",
-       "3    -0.01928  0.59042  0.58489  ...        0       0         2       0    0   \n",
-       "4    -0.45174 -0.30172  1.30612  ...        1       0         0       1    0   \n",
-       "...       ...      ...      ...  ...      ...     ...       ...     ...  ...   \n",
-       "1880  1.88511  0.76096 -1.13788  ...        0       0         0       3    3   \n",
-       "1881  0.58331  0.76096 -1.51840  ...        2       0         0       3    5   \n",
-       "1882 -1.27553 -1.77200 -1.38502  ...        4       0         2       0    2   \n",
-       "1883  0.29338 -1.62090 -2.57309  ...        3       0         0       3    3   \n",
-       "1884  1.65653  1.11406  0.41594  ...        3       0         0       3    3   \n",
+       "       Oscore   Ascore   Cscore  ...  Heroin  Ketamine  Legalh  LSD  Meth  \\\n",
+       "0    -0.58331 -0.91699 -0.00665  ...       0         0       0    0     0   \n",
+       "1     1.43533  0.76096 -0.14277  ...       0         2       0    2     3   \n",
+       "2    -0.84732 -1.62090 -1.01450  ...       0         0       0    0     0   \n",
+       "3    -0.01928  0.59042  0.58489  ...       0         2       0    0     0   \n",
+       "4    -0.45174 -0.30172  1.30612  ...       0         0       1    0     0   \n",
+       "...       ...      ...      ...  ...     ...       ...     ...  ...   ...   \n",
+       "1880  1.88511  0.76096 -1.13788  ...       0         0       3    3     0   \n",
+       "1881  0.58331  0.76096 -1.51840  ...       0         0       3    5     4   \n",
+       "1882 -1.27553 -1.77200 -1.38502  ...       0         2       0    2     0   \n",
+       "1883  0.29338 -1.62090 -2.57309  ...       0         0       3    3     0   \n",
+       "1884  1.65653  1.11406  0.41594  ...       0         0       3    3     0   \n",
        "\n",
-       "      Meth  Mushrooms  Nicotine  Semer  VSA  \n",
-       "0        0          0         2      0    0  \n",
-       "1        3          0         4      0    0  \n",
-       "2        0          1         0      0    0  \n",
-       "3        0          0         2      0    0  \n",
-       "4        0          2         2      0    0  \n",
-       "...    ...        ...       ...    ...  ...  \n",
-       "1880     0          0         0      0    5  \n",
-       "1881     4          4         5      0    0  \n",
-       "1882     0          2         6      0    0  \n",
-       "1883     0          3         4      0    0  \n",
-       "1884     0          3         6      0    2  \n",
+       "      Mushrooms  Nicotine  Semer  VSA  User_Canna  \n",
+       "0             0         2      0    0       False  \n",
+       "1             0         4      0    0        True  \n",
+       "2             1         0      0    0        True  \n",
+       "3             0         2      0    0        True  \n",
+       "4             2         2      0    0        True  \n",
+       "...         ...       ...    ...  ...         ...  \n",
+       "1880          0         0      0    5        True  \n",
+       "1881          4         5      0    0        True  \n",
+       "1882          2         6      0    0        True  \n",
+       "1883          3         4      0    0        True  \n",
+       "1884          3         6      0    2        True  \n",
        "\n",
-       "[1885 rows x 31 columns]"
+       "[1885 rows x 32 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.drop(\"ID\",axis=1)"
+    "data"
    ]
   },
   {
@@ -2076,6 +2072,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -2125,6 +2128,13 @@
     "mod.fit(X_train,y_train.values.ravel())\n",
     "pred = mod.predict(X_test)\n",
     "accuracy_score(y_test,pred)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying to know which is the best number of neigbhours"
    ]
   },
   {
@@ -2217,30 +2227,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6    463\n",
-       "0    413\n",
-       "2    266\n",
-       "3    211\n",
-       "1    207\n",
-       "5    185\n",
-       "4    140\n",
-       "Name: Cannabis, dtype: int64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data[\"Cannabis\"].value_counts()"
+    "we can see that our accuracy score is not really good. Let's try to create a new feature User_Cannabis"
    ]
   },
   {
@@ -3418,6 +3408,13 @@
     "sns.heatmap(confusion_matrix(y_test2,yfinal),annot=True)\n",
     "\n",
     "print(accuracy_score(y_test2,yfinal))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "prediction is much better"
    ]
   },
   {
